--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,10 @@
                 .chess-piece-white{
                     color: lightgray;
                 }
+
+                .black-square {
+                    background: darkgray;
+                }
             </style>
         {% endblock %}
     </head>
